<resources>
    <string name="app_name">QRfoodProject</string>
    <string name="QRfood">QRfood</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Account">Account</string>
    <string name="Name">Name</string>
    <string name="Gender">Gender</string>>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Confirm">Confirm</string>
    <string name="Back">Back</string>
    <string name="FoodFile">食物檔案</string>
    <string name="FoodSchedule">飲食日誌</string>
    <string name="PersonData">個人資料</string>
    <string name="QRCode">QR Code</string>
    <string name="Logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
