<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginbg"
    tools:context=".login.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:text="QRfood"
        android:textColor="#ffffff"
        android:textSize="100px"
        android:textStyle="bold"
        app:fontFamily="cursive" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/login_logo"
        android:drawablePadding="5dp" />

    <EditText
        android:id="@+id/edtAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:drawableLeft="@drawable/login_name"
        android:ems="30"
        android:hint="@string/Account"
        android:inputType="text"
        android:textColorHint="#ffffff"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF"
        app:passwordToggleEnabled="true" >
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:drawableStart="@drawable/login_password"
            android:ems="30"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="15dp"
        android:background="@drawable/login_button_shape"
        android:text="@string/Login"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="24sp" />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="Have no account yet ?"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="50px"
        android:fontFamily="sans-serif-smallcaps" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" >
        <Button
            android:id="@+id/link_register"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="#ffffff"
            android:text="Sign Up"
            android:textColor="#ff2600"
            android:textSize="40px"
            android:textAllCaps="false"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="or"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="50px"
            android:textStyle="normal"
            android:fontFamily="sans-serif-smallcaps" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>