<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/registerbg"
    tools:context=".login.Register">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/Register"
                android:textColor="#000000"
                android:textSize="45sp"
                app:fontFamily="cursive" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_trans_white_rectangle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="5dp"
                    app:srcCompat="@drawable/registericon" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="10dp"
                    android:text="Create an account"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_trans_white_rectangle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Just a moment to get you started!"
                    android:gravity="center|center_horizontal"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_trans_white_rectangle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Account"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/register_round_white"
                    android:drawableLeft="@drawable/register_identificationicon"
                    android:drawablePadding="5dp"
                    android:hint="@string/Account"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:textColorHint="#666666"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_trans_white_rectangle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Password"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/register_round_white"
                    android:drawableLeft="@drawable/login_password"
                    android:drawablePadding="5dp"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:textColorHint="#666666"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_trans_white_rectangle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Confirm_Password"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/register_round_white"
                    android:drawableLeft="@drawable/login_password"
                    android:drawablePadding="5dp"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:textColorHint="#666666"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_trans_white_rectangle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Name"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/register_round_white"
                    android:drawableLeft="@drawable/login_name"
                    android:drawablePadding="5dp"
                    android:hint="@string/Name"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:textColorHint="#666666"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_trans_white_rectangle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Email"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/register_round_white"
                    android:drawableLeft="@drawable/register_email"
                    android:drawablePadding="5dp"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:textColorHint="#666666"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_trans_white_rectangle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/register_gender"
                    android:layout_marginLeft="25dp"/>
                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <RadioButton
                        android:id="@+id/male_radio_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/register_radio_selector"
                        android:textColor="@drawable/register_radio_textselector"
                        android:text="@string/Male"
                        android:textSize="24sp"
                        android:checked="true"
                        android:gravity="center"
                        android:button="@android:color/transparent"
                        android:paddingLeft="16dp"
                        android:paddingTop="3dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="3dp" />
                    <RadioButton
                        android:id="@+id/female_radio_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/register_radio_selector"
                        android:textColor="@drawable/register_radio_textselector"
                        android:textSize="24sp"
                        android:text = "@string/Female"
                        android:gravity="center"
                        android:button="@android:color/transparent"
                        android:paddingLeft="16dp"
                        android:paddingTop="3dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="3dp" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/register_trans_white_rectangle"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Height"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/register_round_white"
                    android:drawableLeft="@drawable/register_height"
                    android:drawablePadding="5dp"
                    android:hint="輸入身高，ex:175(cm)"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:textColorHint="#666666"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/register_trans_white_rectangle"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Weight"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/register_round_white"
                    android:drawableLeft="@drawable/register_weight"
                    android:drawablePadding="5dp"
                    android:hint="輸入體重，ex:60(kg)"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:textColorHint="#666666"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_trans_white_rectangle"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="以下這個填空是填你平常在外的運動量\n例如：低、稍低、適度、高"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/register_trans_white_rectangle"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/Exercise"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/register_round_white"
                    android:drawableLeft="@drawable/register_exercise"
                    android:drawablePadding="5dp"
                    android:hint="1=低,2=稍低,3=適度,4=高"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:textColorHint="#666666"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/Register"
                android:background="@drawable/register_confirm_button_shape"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="24sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal"
                    android:text="Already a member ?"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/link_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal"
                    android:text="LOGIN"
                    android:textColor="#CDDC39"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>